add setup steps for spark 3.5.5